@@ -1,15 +1,23 @@
 package com.techsisters.gatherly.config;
 
 import java.util.Arrays;
+import java.util.List;
 
+import com.techsisters.gatherly.filter.JwtAuthenticationFilter;
+import com.techsisters.gatherly.service.CustomUserDetailsService;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
+import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
+import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.Customizer;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
@@ -24,8 +32,16 @@ import lombok.AllArgsConstructor;
 public class SpringApiSecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthFilter;
-    private final AuthenticationProvider authenticationProvider;
+    private final CustomUserDetailsService userDetailsService;
 
+    // ============================================
+    // SECURITY FILTER CHAIN
+    // ============================================
+
+    /**
+     * Main security configuration.
+     * Defines which endpoints are public vs protected, and configures JWT filtering.
+     */
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
@@ -33,50 +49,46 @@ public class SpringApiSecurityConfig {
                 // We disable this because we are using stateless REST APIs (not HTML forms).
                 // Our React app will send a JWT, not a session cookie.
                 .csrf(csrf -> csrf.disable())
-
                 // This line tells Spring Security to use the 'corsConfigurationSource' bean
                 // defined below.
                 .cors(Customizer.withDefaults())
-                .authenticationProvider(authenticationProvider)
-
+                .authenticationProvider(authenticationProvider())
                 // Configure Session Management to be STATELESS
                 // This is essential for REST APIs.
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-
                 // Set up authorization rules
                 .authorizeHttpRequests(authorize -> authorize
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-
                         // Whitelist your "send-otp" and other auth endpoints
-                        .requestMatchers("/api/auth/**").permitAll()
-
+                        .requestMatchers("/auth/**").permitAll().requestMatchers("/public/events/**").permitAll()
                         // Whitelist static resources
                         .requestMatchers("/", "/index.html", "/static/**").permitAll()
-
                         // --- SECURE (PRIVATE) ENDPOINTS ---
                         // All other requests must be authenticated
                         .anyRequest().authenticated())
-
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
                 .exceptionHandling(exceptions -> exceptions.accessDeniedHandler(new ApiAccessDeniedHandler())
                         .authenticationEntryPoint(new ApiAuthenticationEntryPoint()));
-
         return http.build();
     }
 
+
+    // ============================================
+    // CORS CONFIGURATION
+    // ============================================
     // This bean configures what origins, methods, and headers are allowed.
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
         // Allow your React app's origin
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
+        configuration.setAllowedOrigins(List.of("http://localhost:3000"));
 
         // Allow all necessary HTTP methods
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
 
         // Allow all headers
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
 
         // Allow credentials (if you use cookies)
         configuration.setAllowCredentials(true);
@@ -87,5 +99,42 @@ public class SpringApiSecurityConfig {
 
         return source;
     }
+
+    // ============================================
+    // AUTHENTICATION BEANS
+    // ============================================
+
+    /**
+     * Configures how users are authenticated.
+     * Uses DaoAuthenticationProvider to load users from database via UserDetailsService.
+     */
+
+    @Bean
+    public AuthenticationProvider authenticationProvider() {
+        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider(passwordEncoder());
+        authProvider.setUserDetailsService(userDetailsService);
+        return authProvider;
+    }
+
+    ;
+
+    /**
+     * Password encoder bean.
+     * Required by Spring Security even though we use OTP authentication.
+     */
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
+
+    /**
+     * Authentication manager bean.
+     * Can be used for manual authentication if needed.
+     */
+    @Bean
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+        return config.getAuthenticationManager();
+    }
+
 
 }
